2014-10-10 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed inconsistencies in Find/Replace behaviours.
    - rev 1241

2014-10-10 belangeo <belangeo@gmail.com>

    * Added new object : SmoothDelay, a delay line that does not produce clicks or pitch shifting when the delay time is changing.
    - rev 1239

2014-10-08 belangeo <belangeo@gmail.com>

    * Added new object : AttackDetector, audio signal onset detection.
    - rev 1238

2014-10-07 belangeo <belangeo@gmail.com>

    * Added new object : Centroid, Computes the spectral centroid of an input signal.
    - rev 1237

-------------------------------------------------------------------------------------

2014-08-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.1.
    - rev 1236

2014-09-12 belangeo <belangeo@gmail.com>

    * E-Pyo: Added RadioPyo to the template choices.  
    - rev 1234

2014-09-09 belangeo <belangeo@gmail.com>

    * Fixed Compare when used with None or a string. Print a warning and set 'comp' attribute to 0. 
    - rev 1229

2014-09-05 belangeo <belangeo@gmail.com>

    * Fixed live interpreter of the server window when using arrow keys navigation.
    - rev 1228

2014-09-04 belangeo <belangeo@gmail.com>

    * E-Pyo: Check if WxPython 3.0 is installed, otherwise uses 2.8.
    - rev 1227

2014-09-02 belangeo <belangeo@gmail.com>

    * Added anti-aliasing to PyoTableObject's grapher widget. Fixed Ctrl+W on the grapher.
    - rev 1225, 1226

-------------------------------------------------------------------------------------

2014-08-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.0.
    - rev 1224

2014-08-26 belangeo <belangeo@gmail.com>

    * pyo can now be used without any GUI toolkit (WxPython or TKinter). Widgets are simply disabled.
    - rev 1208

2014-06-22 belangeo <belangeo@gmail.com>

    * Added Server methods to auto-connect Jack ports to already opened ports.
    - rev 1201

2014-05-23 belangeo <belangeo@gmail.com>
